--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "native-base": "^2.4.3",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-communications": "^2.2.1",
     "react-navigation": "^1.5.12"
   }
 }
