--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
-    "react-native-communications": "^2.2.1",
-    "react-navigation": "^2.11.2"
+    "react-native-communications": "^2.2.1"
   }
 }
